@@ -1,4 +1,4 @@
-%define glibcrelease 20
+%define glibcrelease 21
 %define auxarches i586 i686 athlon sparcv9 alphaev6
 %define xenarches i686 athlon
 %ifarch %{xenarches}
@@ -1448,6 +1448,7 @@ rm -f *.filelist*
 %endif
 
 %changelog
+* Tue Aug 15 2006 Jakub Jelinek <jakub@redhat.com> 2.4.90-21
 - if some test gets stuck, kill the tee process after make check
   finishes
 - build with -mtune=generic on i686 and x86_64
